Posting a question, answering a question is done. Due to no of modal  included, it was hard to track down where the error is coming from. Example: calling method lifecycle

--- a/src/app/all-phones/all-phones.component.html
+++ b/src/app/all-phones/all-phones.component.html
@@ -59,7 +59,7 @@
               <a [routerLink]="['/mobilePhone', phone.mobileId]" class=" btn btn-info btn-sm">
                 <span>
                   <i class="lnr lnr-cart"></i>
-                </span> Add to Cart</a>
+                </span> Select Phone</a>
             </span>
           </div>
         </div>
