--- a/src/app/mostly-reviewed/mostly-reviewed.component.html
+++ b/src/app/mostly-reviewed/mostly-reviewed.component.html
@@ -22,7 +22,7 @@
               <span>{{phone.mobilePrice}}</span>
             </span>
             <span class="float-right">
-              <a [routerLink]="['/mobilePhone', phone.mobileId]" class=" btn btn-info text-white" ng-click="addToBasket(id,quantity,price)">
+              <a [routerLink]="['/mobilePhone', phone.mobileId]" class=" btn btn-info text-white">
                 <span>
                   <i class="lnr lnr-cart"></i>
                 </span>Select Phone</a>
