--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -8,7 +8,7 @@
   <h3 class="font-italic font-weight-normal">My Basket</h3>
 
   <div class="row" *ngIf="basketItems?.length > 0 ; else noItems">
-    <div class="col-6 col-md-4 pt-2 pb-2" *ngFor="let item of basketItems">
+    <div class="col-12 col-md-6 col-lg-3 d-flex pt-2 pb-2" *ngFor="let item of basketItems">
 
       <div class="card">
         <div class="row no-gutters m-1">
@@ -23,9 +23,33 @@
             </div>
           </div>
         </div>
-        <div class="card-footer w-100 text-muted">
-          On Stock!
+        
+        <div class="card-footer text-muted mt-2">
+          <span class="float-left ml-1">
+            <a (click)="deleteItem(item)" class="text-muted">
+              <span class="">
+                <i class="fas fa-trash-alt"></i>
+              </span>
+            </a>
+          </span>
+          <span class="float-right">
+            On Stock!
+          </span>
         </div>
+        <!-- 
+        <div class="card-footer text-muted ">
+          <span class="float-left mt-2">
+            <del class="grey">$199</del>
+            <span class="ml-1 ng-binding">$150</span>
+          </span>
+          <span class="float-right ng-scope" ng-if="quantity > 1">
+            <a href="#!" class=" btn btn-info">
+              <span>
+                <i class="lnr lnr-cart"></i>
+              </span> Add to Cart</a>
+          </span>
+        </div> -->
+
       </div>
 
       <!-- <div class="card">
