--- a/src/app/detail-phone/detail-phone.component.css
+++ b/src/app/detail-phone/detail-phone.component.css
@@ -121,3 +121,12 @@ h1 { font-size: 1.5em; margin: 10px; }
 .rating:not(:checked) > label:hover, /* hover current star */
 .rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
 
+.fullSpecLink{
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.viewFullSpecLink{
+  text-decoration: underline;
+  font-weight: 200;
+}
